frontend/src/styleSheet.css
html,
body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  padding: 0;
  height: 100%;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
    monospace;
}
a {
  text-decoration: none;
  color: black;
}

* {
  @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600&display=swap");
  --primaryBlue: #0671b7;
  --secondaryBlue: #e0f3ff;
  --lightBlue: #f9fdff;
  --white: #fff;
}

@media (min-width: 576px) {
  .hero-mt {
    margin-top: 20px;
  }
}

@media (min-width: 768px) {
  .hero-mt {
    margin-top: 150px;
  }
}

.overflow {
  overflow-x: hidden;
  overflow-y: auto;
}

.landing-container {
  min-height: 100vh;
}

h1 {
  font-size: 34;
}

h2 {
  font-size: 20;
  font-weight: bold;
  color: #0671b7;
}

h3 {
  font-size: 20;
  font-weight: 600;
}

p {
  font-size: 16px;
}
h4 {
  font-size: 18;
  color: #0671b7;
}

h5 {
  font-size: 18;
  font-weight: bold;
}
h6 {
  font-size: 4rem;
  font-weight: bold;
  color: #0671b7;
}

ul {
  font-size: 16px;
}

.centered-text {
  text-align: center;
}

a:hover {
  text-decoration: none;
  color: rgba(0, 0, 0, 0.349);
}

.underline {
  text-decoration: underline;
}

.container {
  flex-wrap: wrap;
  flex-direction: column;
}

.nav-bar-links {
  margin-left: 3rem;
  font-size: large;
}

.left {
  margin-left: 8rem;
}

.right {
  margin-right: 8rem;
}

.footer {
  background-color: var(--lightBlue);
}


.lets-get-text {
  color: var(--primaryBlue);
  font-size: 50px;
  font-weight: bold;
}

.cooking-text {
  color: var(--primaryBlue);
  font-size: 85px;
  font-weight: bolder;
}

.center-horiz {
  margin-left: auto;
  margin-right: auto;
}
.center-vert {
  margin-top: auto;
  margin-bottom: auto;
}

.grid-container {
  display: grid;
  grid-template-columns: auto auto;
  grid-template-rows: 80vh;
  align-items: center;
  justify-items: center;
}

.centerthis {
  align-self: center;
  justify-self: center;
}

.sign-up-button {
  padding: 10px;
  width: 200px;
  height: 54px;
  color: white;
  background: var(--primaryBlue);
  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
  border-radius: 25px;
}

.bottom-bar {
  background-color: var(--secondaryBlue);
}

.hero-text {
  height: 100%;
}

.hero-tagline {
  font-size: 30px;
  margin: 40px 0;
}

  .bg-color{
    position: relative;
    background: #EFF9FF;
  }
.top-lightimg {
  position: absolute;
  top: 10%;
  left: 50%;
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
}

.sign-up-text {
  font-size: 34;
  font-weight: bold;
  color: var(--primaryBlue);
  text-align: center;
}

.blue-background {
  background-color: var(--secondaryBlue);
}

.light-blue-background {
  background-color: var(--lightBlue);
}

.box{
        align-items: center;
        justify-content: center;
        overflow:auto;
        margin-top: 20px;
        margin-bottom: 20px;
        margin-left: 7rem;
        border-radius: 25px;
        box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
}

  .recipe-img{
    min-height: 299;
    width: 207;
  }


  .white-box{
    width: 346px;
    height: 293px;
    left: 88px;
    top: 601px;
    
    border-radius: 25px;
    background: #FFFFFF;
    box-shadow: 0px -10px 30px rgba(0, 0, 0, 0.06);
  }

  .recipe-title{
    position: absolute;
    width: 411px;
    height: 48px;
    left: 88px;
    top: 152px;
    font-weight: 800;
    font-size: 30px;
    line-height: 125.29%;
    letter-spacing: 0.0120588em;
    color: #0671B7;

  }

  

  .graph-parts {
    display: inline-block;
    max-width: 1700px;
    margin-left: 6rem;
    margin-right: 6rem;
    margin-bottom: 6rem;
  }

  .right-table{
    float:left;
  }

  .plus-icon{
  
    position:fixed;
  }

  
.secondary-color {
  background-color: var(--secondaryBlue);
}

.uploade-photo {
  position: relative;
  width: 346px;
  height: 40px;
  background: var(--secondaryBlue);
}

.bg-color {
  position: relative;
  background: #ffffff;
}

.photo-box {
  position: relative;
}

.recipeTitle {
  margin-top: 20px;
  font-weight: 485;
  font-size: 16px;
  line-height: 125.29%;
  letter-spacing: 0.0120588em;
  color: #0671b7;
}

.OtherTitle {
  margin-top: 55px;
  font-weight: 485;
  font-size: 16px;
  line-height: 125.29%;
  letter-spacing: 0.0120588em;
  color: #0671b7;
}

.setGridMargin {
  margin-top: 20px;
}

.welcome-parts1 {
  max-width: 1700px;
  margin-left: 15rem;
  margin-right: 6rem;
  
}
.welcome-parts2 {
  max-width: 1700px;
  margin-left: 15rem;
  margin-right: 6rem;
}


.tags{
  display: inline-block;
  flex-direction: row;
  align-items: center;
  padding: 2px 12px;
  gap: 6px;
  background: #E5FDF6;
  border-radius: 12px;
  position: "absolute";
}

.tag-font{
  width: 43px;
  height: 20px;
  font-style: normal;
  font-weight: 400;
  font-size: 15px;
  line-height: 20px;
  color: #0671B7;
}

.ingredients-font{
  width: 335px;
  height: 24px;
  font-weight: 400;
  font-size: 16px;
  line-height: 24px;
  display: flex;
  align-items: center;
  letter-spacing: 0.5px;
  color: #0671B7;
  flex: none;
  order: 0;
  align-self: stretch;
  flex-grow: 0;
}

.ingredients-box{
  display: block;
  width: 346px;
  height: 62px;
  flex-direction: column;
  align-items: center;
  padding: 0px;
  background: #FFFFFF;
  box-shadow: 0px -10px 30px rgba(0, 0, 0, 0.06);
  border-radius: 25px;
}

.method-box{
  display: block;
  width: 346px;
  height: 62px;
  flex-direction: column;
  align-items: flex-start;
  padding: 0px;
  background: #FFFFFF;
  box-shadow: 0px -10px 30px rgba(0, 0, 0, 0.06);
  border-radius: 25px;
}
.addRecipeButton{
  margin-top: 4rem;
  display: grid;
  grid-template-columns:85% 50%;
  grid-template-rows: 20vh;
}

.edit-recipe-grid{
  display: grid;
  grid-template-columns: auto auto auto auto auto auto;
  grid-template-rows: auto auto auto auto auto auto;
}

.ingredient-grid{
  grid-column-start: 3;
  grid-column-end: 4;
  grid-row-start: 3;
  grid-row-end: auto;
  justify-items: end;
  align-items: start;
}

.steps-grid{
  grid-column-start: 5;
  grid-column-end: 6;
  grid-row-start: 3;
  grid-row-end: auto;
  justify-items: end;
  align-items: start;
}

